<resources>
    <string name="app_name">My Application</string>
    <string name="hola">Bienvenido!</string>
    <string name="btn">Siguiente</string>
    <string name="segunda">Segunda Pantalla</string>
    <string name="intE">Intents Explicitos</string>
    <string name="intI">Intents Implicitos</string>
    <string name="btn1">Navegador</string>
    <string name="btn2">Google maps</string>
    <string name="btn3">Calculadora</string>
    <string name="btn4">Contactos</string>
    <string name="btn5">Scott pilgrim</string>
    <string name="btn6">Star wars</string>
    <string name="btn7">Valorant</string>
    <string name="btn8">Metal gear solid</string>



</resources>