<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2"
    android:background="#2C2B2B">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:duplicateParentState="true">
    <TextView
        android:id="@+id/txt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/segunda"
        android:textSize="50dp"
        android:textColor="@color/white"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intE"
        android:textSize="30dp"
        android:textColor="@color/white"
        android:layout_centerInParent="true"
        android:layout_below="@+id/txt1"
        android:id="@+id/txt2"/>

        <Button
            android:id="@+id/btnn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt2"
            android:layout_centerInParent="true"
            android:text="@string/btn1"
            android:backgroundTint="#26FB00"/>

        <Button
            android:id="@+id/btng"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnn"
            android:layout_centerInParent="true"
            android:backgroundTint="#FF0000"
            android:text="@string/btn2" />

        <Button
            android:id="@+id/btnc"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btng"
            android:layout_centerInParent="true"
            android:backgroundTint="@color/black"
            android:text="@string/btn3" />

        <Button
            android:id="@+id/btnno"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnc"
            android:layout_centerInParent="true"
            android:text="@string/btn4"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intI"
            android:textSize="30dp"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            android:layout_below="@+id/btnno"
            android:id="@+id/txt3"/>

        <Button
            android:id="@+id/btn5"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt3"
            android:layout_centerInParent="true"
            android:text="@string/btn5" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn5"
            android:layout_centerInParent="true"
            android:text="@string/btn6" />

        <Button
            android:id="@+id/btn7"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn6"
            android:layout_centerInParent="true"
            android:text="@string/btn7" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn7"
            android:layout_centerInParent="true"
            android:text="@string/btn8" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>